--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<li><a style="font-size: 12px;" href="#teaching">Teaching</a></li>
 		<li><a style="font-size: 12px;" href="#research">Research</a></li>
 		<li><a style="font-size: 12px;" href="#publications">Publications</a></li>
-		<li><a style="font-size: 12px;" href="#students">Projects</a></li>
+		<li><a style="font-size: 12px;" href="#projects">Projects</a></li>
 		<li><a style="font-size: 12px;" href="#students">Students</a></li>
 	</ul>
 </div>
@@ -405,15 +405,15 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li>(EXPRESS - FCT UTAP­EXPL/EEI­ESS/0031/2014)</li>
-<li>(KD-LBSN - FCT EXPL/EEI-ESS/0427/2013 - Principal Investigator)</li>
-<li>(DATASTORM - FCT EXCL/EEI-ESS/0257/2012)</li>
-<li>(REACTON - FCT UTA-Est/MAI/0006/2009)</li>
-<li>(SInteliGIS - FCT TDC/EIA-EIA/109840/2009 - Principal Investigator)</li>
-<li>(EuDML - CIP-ICT-PSP.2009.2.4)</li>
-<li>(DIGMAP - ECP-2005-CULT-038042)</li>
-<li>(GREASE/GREASE2 - FCT POSI-SRI-47071-2002)</li>
-<li>(XMLBase - FCT POSI-SRI-40193-2001)</li>
+<li>Expression and Recognition of Irony in Multicultural Social Media (EXPRESS - FCT UTAP­EXPL/EEI­ESS/0031/2014)</li>
+<li>Knowledge Discovery from Location-Based Social Networks (KD-LBSN - FCT EXPL/EEI-ESS/0427/2013 - Principal Investigator)</li>
+<li>Large-Scale Data Management in Cloud Environments (DATASTORM - FCT EXCL/EEI-ESS/0257/2012)</li>
+<li>Retrieval, Extraction and Aggregation Computing Technology for Integrating and Organizing News (REACTON - FCT UTA-Est/MAI/0006/2009)</li>
+<li>Services for Intelligent Geographical Information Systems  (SInteliGIS - FCT TDC/EIA-EIA/109840/2009 - Principal Investigator)</li>
+<li>The European Digital Mathematics Library (EuDML - CIP-ICT-PSP.2009.2.4)</li>
+<li>Discovering our Past World with Digitized Historical Maps (DIGMAP - ECP-2005-CULT-038042)</li>
+<li>Geographic Reasoning for Search Engines (GREASE/GREASE2 - FCT POSI-SRI-47071-2002)</li>
+<li>Semi-Structured Data Management (XMLBase - FCT POSI-SRI-40193-2001)</li>
 			</ul>
 		</td>
     </tr>
