--- a/index.html
+++ b/index.html
@@ -471,6 +471,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Fernando Melo, <i>Geocodificação automática de documentos</i>, IST, 2015</li>
 			<li>André Leal, <i>Reconhecimento e desambiguação de entidades em textos Biomédicos</i>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
 			<li>João Oliveira, <i>Análise de Corpora Jornalístico através das Ocorrências de N-Gramas</i>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
+			<li>Rui Maia, <i>Contextual Food Recommendation Through Factorization Machines</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Manuel Reis, <i>Towards the Study of Human Emotions Through Social Media Contents</i>, IST, 2015</li>
+			<li>Ricardo Marques, <i>Detecting contradictions in news quotations</i>, IST, 2015</li>
+			<li>Jorge Almeida, <i>Personalized Food Recommendation Exploring Content-Based Methods</i>, IST, 2015</li>
 			</ul>
 		</td>
     </tr>
