--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Reis, <i>Towards the Study of Human Emotions Through Social Media Contents</i>, IST, 2015</li>
 			<li>Ricardo Marques, <i>Detecting contradictions in news quotations</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Jorge Almeida, <i>Personalized Food Recommendation Exploring Content-Based Methods</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Rodrigo Rodrigues, <i>Adapting State-of-the-Art Named Entity Recognition andDisambiguation Frameworks for Handling Clinical Text</i>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
 			</ul>
 		</td>
     </tr>
