--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@ involved in several research projects related to geospatial aspects in informati
 <li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
 <li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
 <li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Luis M. de Campos, Juan M. Fernaández-Luna, Juan F. Huete, Pável Calado and Bruno Martins, <i>Learning Parliamentary Profiles for Recommendation Tasks</i>, Proceedings of the Conference of the Spanish Association for Artificial Intelligence, 2015</li>
 <li>David Batista, Bruno Martins and Mário J. Silva, <i>Semi-Supervised Bootstrapping of Relationship Extractors with Distributional Semantics</i>, Proceedings of the Conference on Empirical Methods in Natural Language Processing, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
 <li>João Pereira, Bruno Martins and Helena Galhardas, <i>A Benchmark for Relation Extraction Kernels</i>, Proceedings of the East-European Conference on Advances in Databases and Information Systems, 2015 [<a href="http://link.springer.com/book/10.1007/978-3-319-23135-8">PDF</a>] </li>
 <li>Tiago Gonçalves, Bruno Martins and Ana Paula Afonso, <i>Improving Spatial Awareness for Human Trajectory Visualization in Space-Time Cubes</i>, Proceedings of the International Conference on Human-Computer Interaction, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
@@ -409,8 +411,8 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - CMUP­ERI/TIC/0046/2014)</li>
-<li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - PTDC/EEI-SCR/1743/2014)</li>
+<li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
+<li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - FCT PTDC/EEI-SCR/1743/2014)</li>
 <li>Expression and Recognition of Irony in Multicultural Social Media (EXPRESS - FCT UTAP­EXPL/EEI­ESS/0031/2014)</li>
 <li>Knowledge Discovery from Location-Based Social Networks (KD-LBSN - FCT EXPL/EEI-ESS/0427/2013 - Principal Investigator)</li>
 <li>Large-Scale Data Management in Cloud Environments (DATASTORM - FCT EXCL/EEI-ESS/0257/2012)</li>
