--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<li><a style="font-size: 12px;" href="#publications">Publications</a></li>
 		<li><a style="font-size: 12px;" href="#projects">Projects</a></li>
 		<li><a style="font-size: 12px;" href="#students">Students</a></li>
+		<li><a style="font-size: 12px;" href="#activities">Activities</a></li>
 	</ul>
 </div>
 
@@ -487,6 +488,60 @@ involved in several research projects related to geospatial aspects in informati
 			</ul>
 		</td>
     </tr>
+
+    <tr>
+		<td>
+			<h2><a name="activities">Recent professional activities</a></h2>
+		</td>
+    </tr>
+    <tr>
+		<table border=0 cellspacing=0 cellpadding=0 width="100%">
+				<tr>
+					<td>
+						<strong>Member of organization committees: </strong>
+						<a href="">LxMLS'16</a> |
+						<a href="">LocWeb'16</a> |
+						<a href="">LocWeb'16</a> |
+						<a href="">LocWeb'15</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Member of programe committees and reviewer: </strong>
+						<a href="">ECIR'16</a> |
+						<a href="">GIR'16</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Reviewer in international journals: </strong>
+						<a href="">Spatial Cognition and Computation</a> |
+						<a href="">Transactions on Knowledge and Data Engineering</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Project reviewer: </strong>
+						<a href="">Swiss National Science Foundation</a> |
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="">Walter Renteria-Agualimpia</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">José Correia</a> | 						
+						<a href="">Hugo Lopes</a> | 						
+					</td>
+				</tr>
+		</table>
+    </tr>
+
+
 </table>
 
 </td>
