--- a/index.html
+++ b/index.html
@@ -491,51 +491,63 @@ involved in several research projects related to geospatial aspects in informati
 
     <tr>
 		<td>
-			<h2><a name="activities">Recent professional activities</a></h2>
+			<h2><a name="activities">Recent Professional Activities</a></h2>
 		</td>
     </tr>
     <tr>
 		<table border=0 cellspacing=0 cellpadding=0 width="100%">
 				<tr>
 					<td>
+					<ul><li>
 						<strong>Member of organization committees: </strong>
 						<a href="">LxMLS'16</a> |
 						<a href="">LocWeb'16</a> |
 						<a href="">LocWeb'16</a> |
 						<a href="">LocWeb'15</a>
+					</li></ul>
 					</td>
 				</tr>
 				<tr>
 					<td>
+					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="">ECIR'16</a> |
 						<a href="">GIR'16</a>
+					</li></ul>
 					</td>
 				</tr>
 				<tr>
 					<td>
+					<ul><li>
 						<strong>Reviewer in international journals: </strong>
 						<a href="">Spatial Cognition and Computation</a> |
 						<a href="">Transactions on Knowledge and Data Engineering</a>
+					</li></ul>
 					</td>
 				</tr>
 				<tr>
 					<td>
+					<ul><li>
 						<strong>Project reviewer: </strong>
 						<a href="">Swiss National Science Foundation</a> |
+					</li></ul>
 					</td>
 				</tr>
 				<tr>
 					<td>
+					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
 						<a href="">Walter Renteria-Agualimpia</a>
+					</li></ul>
 					</td>
 				</tr>
 				<tr>
 					<td>
+					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
 						<a href="">José Correia</a> | 						
 						<a href="">Hugo Lopes</a> | 						
+					</li></ul>
 					</td>
 				</tr>
 		</table>
