--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<li><a style="font-size: 12px;" href="#projects">Projects</a></li>
 		<li><a style="font-size: 12px;" href="#students">Students</a></li>
 		<li><a style="font-size: 12px;" href="#activities">Activities</a></li>
+		<li><a style="font-size: 12px;" href="https://github.com/bgmartins/bgmartins.github.io/raw/master/Martins_Biographical.pdf">Short CV</a></li>
 	</ul>
 </div>
 
@@ -141,6 +142,11 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 						<strong>Web: </strong><a href="http://web.tecnico.ulisboa.pt/bruno.g.martins/">http://web.tecnico.ulisboa.pt/bruno.g.martins/</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>github: </strong><a href="https://github.com/bgmartins">https://github.com/bgmartins</a>
 					</td>
 				</tr>
 				<tr>
@@ -502,8 +508,8 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>Member of organization committees: </strong>
 						<a href="">LxMLS'16</a> |
 						<a href="">LocWeb'16</a> |
-						<a href="">LocWeb'16</a> |
-						<a href="">LocWeb'15</a>
+						<a href="">LocWeb'15</a> |
+						<a href="">LocWeb'14</a> |
 					</li></ul>
 					</td>
 				</tr>
@@ -512,7 +518,11 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="">ECIR'16</a> |
-						<a href="">GIR'16</a>
+						<a href="">SAC'16</a> |
+						<a href="">GIR'15</a> |
+						<a href="">SIGSPATIAL'15</a> |
+						<a href="">AGILE'15</a> |
+						<a href="">SAC'15</a> |
 					</li></ul>
 					</td>
 				</tr>
@@ -520,8 +530,16 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="">ACM Transactions on Spatial Algorithms and Systems</a> |
+						<a href="">Journal of Geographical Systems</a> |
 						<a href="">Spatial Cognition and Computation</a> |
 						<a href="">Transactions on Knowledge and Data Engineering</a>
+						<a href="">Information Processing & Management</a> |
+						<a href="">Information Systems</a> |
+						<a href="">Artificial Intelligence</a> |
+						<a href="">Distributed and Parallel Databases</a> |
+						<a href="">International Journal on Digital Libraries</a> |
+						<a href="">Cognitive Computation</a>
 					</li></ul>
 					</td>
 				</tr>
@@ -529,7 +547,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Project reviewer: </strong>
-						<a href="">Swiss National Science Foundation</a> |
+						<a href="">Swiss National Science Foundation</a>
 					</li></ul>
 					</td>
 				</tr>
