--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<tr>
-					<td>Researcher in the Information and Decision Support Systems Lab at <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
+					<td>Researcher in the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> at <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
