--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="">ACM Transactions on Spatial Algorithms and Systems</a> |
 						<a href="">Journal of Geographical Systems</a> |
 						<a href="">Spatial Cognition and Computation</a> |
-						<a href="">Transactions on Knowledge and Data Engineering</a>
+						<a href="">Transactions on Knowledge and Data Engineering</a> |
 						<a href="">Information Processing & Management</a> |
 						<a href="">Information Systems</a> |
 						<a href="">Artificial Intelligence</a> |
@@ -555,7 +555,12 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
-						<a href="">Walter Renteria-Agualimpia</a>
+						<a href="">Luís de Sousa</a> | 
+						<a href="">Walter Renteria-Agualimpia</a> | 
+						<a href="http://www.gsd.inesc-id.pt/~mcouceiro/">Maria Couceiro</a> | 
+						<a href="">Sebastiano Peluso</a> |				
+						<a href="">Nuno Datia</a> |				
+						<a href="">Osvaldo Venda Brasão</a> 						
 					</li></ul>
 					</td>
 				</tr>
@@ -564,7 +569,7 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
 						<a href="">José Correia</a> | 						
-						<a href="">Hugo Lopes</a> | 						
+						<a href="">Hugo Lopes</a>						
 					</li></ul>
 					</td>
 				</tr>
