--- a/index.html
+++ b/index.html
@@ -508,8 +508,9 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>Member of organization committees: </strong>
 						<a href="">LxMLS'16</a> |
 						<a href="">LocWeb'16</a> |
+						<a href="http://emnlp2015.emnlp.org/">EMNLP'15</a> |
 						<a href="">LocWeb'15</a> |
-						<a href="">LocWeb'14</a> |
+						<a href="">LocWeb'14</a>
 					</li></ul>
 					</td>
 				</tr>
@@ -522,7 +523,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="">GIR'15</a> |
 						<a href="">SIGSPATIAL'15</a> |
 						<a href="">AGILE'15</a> |
-						<a href="">SAC'15</a> |
+						<a href="">SAC'15</a>
 					</li></ul>
 					</td>
 				</tr>
