--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-						<a href="">José Correia</a> | 						
+						<a href="">Filipe Carrapeto</a> | 
+						<a href="">José Correia</a> | 
 						<a href="">Hugo Lopes</a>						
 					</li></ul>
 					</td>
