--- a/index.html
+++ b/index.html
@@ -506,11 +506,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="">LxMLS'16</a> |
-						<a href="">LocWeb'16</a> |
+						<a href="http://lxmls.it.pt/">LxMLS'16</a> |
+						<a href="http://dhere.de/locweb2016/">LocWeb'16</a> |
 						<a href="http://emnlp2015.emnlp.org/">EMNLP'15</a> |
-						<a href="">LocWeb'15</a> |
-						<a href="">LocWeb'14</a>
+						<a href="http://dhere.de/locweb2015/">LocWeb'15</a> |
+						<a href="http://dhere.de/locweb2014/">LocWeb'14</a>
 					</li></ul>
 					</td>
 				</tr>
@@ -518,12 +518,14 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="">ECIR'16</a> |
-						<a href="">SAC'16</a> |
-						<a href="">GIR'15</a> |
-						<a href="">SIGSPATIAL'15</a> |
-						<a href="">AGILE'15</a> |
-						<a href="">SAC'15</a>
+						<a href="">SocialNLP'16</a> |
+						<a href="http://www.agile-online.org/index.php/conference/conference-2016">AGILE'15</a> |
+						<a href="http://ecir2016.dei.unipd.it">ECIR'16</a> |
+						<a href="http://www.acm.org/conferences/sac/sac2016/">SAC'16</a> |
+						<a href="http://www.geo.uzh.ch/~rsp/gir15/">GIR'15</a> |
+						<a href="http://sigspatial2015.sigspatial.org">SIGSPATIAL'15</a> |
+						<a href="http://www.agile-online.org/index.php/conference/conference-2015">AGILE'15</a> |
+						<a href="http://www.acm.org/conferences/sac/sac2015/">SAC'15</a> | ...
 					</li></ul>
 					</td>
 				</tr>
@@ -571,7 +573,7 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>M.Sc. evaluation comittees: </strong>
 						<a href="">Filipe Carrapeto</a> | 
 						<a href="">José Correia</a> | 
-						<a href="">Hugo Lopes</a>						
+						<a href="">Hugo Lopes</a> | ...						
 					</li></ul>
 					</td>
 				</tr>
