--- a/index.html
+++ b/index.html
@@ -533,16 +533,17 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
-						<a href="">ACM Transactions on Spatial Algorithms and Systems</a> |
-						<a href="">Journal of Geographical Systems</a> |
-						<a href="">Spatial Cognition and Computation</a> |
-						<a href="">Transactions on Knowledge and Data Engineering</a> |
-						<a href="">Information Processing & Management</a> |
-						<a href="">Information Systems</a> |
-						<a href="">Artificial Intelligence</a> |
-						<a href="">Distributed and Parallel Databases</a> |
-						<a href="">International Journal on Digital Libraries</a> |
-						<a href="">Cognitive Computation</a>
+						<a href="http://tsas.acm.org">ACM Transactions on Spatial Algorithms and Systems</a> |
+						<a href="http://link.springer.com/journal/10109">Journal of Geographical Systems</a> |
+						<a href="http://www.pitt.edu/~scc/">Spatial Cognition and Computation</a> |
+						<a href="http://www.computer.org/web/tkde">Transactions on Knowledge and Data Engineering</a> |
+						<a href="http://www.journals.elsevier.com/information-processing-and-management/">Information Processing & Management</a> |
+						<a href="http://www.journals.elsevier.com/information-systems/">Information Systems</a> |
+						<a href="http://www.digitalhumanities.org/dhq/">Digital Humanities Quarterly</a> |
+						<a href="http://www.journals.elsevier.com/artificial-intelligence/">Artificial Intelligence</a> |
+						<a href="http://link.springer.com/journal/10619">Distributed and Parallel Databases</a> |
+						<a href="http://link.springer.com/journal/799">International Journal on Digital Libraries</a> |
+						<a href="http://link.springer.com/journal/12559">Cognitive Computation</a>
 					</li></ul>
 					</td>
 				</tr>
@@ -559,10 +560,10 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
 						<a href="">Luís de Sousa</a> | 
-						<a href="">Walter Renteria-Agualimpia</a> | 
+						<a href="https://scholar.google.com/citations?user=jhbU2DcAAAAJ&hl=pt-BR">Walter Renteria-Agualimpia</a> | 
 						<a href="http://www.gsd.inesc-id.pt/~mcouceiro/">Maria Couceiro</a> | 
-						<a href="">Sebastiano Peluso</a> |				
-						<a href="">Nuno Datia</a> |				
+						<a href="http://www.ssrg.ece.vt.edu/~peluso/">Sebastiano Peluso</a> |				
+						<a href="http://pwp.net.ipl.pt/isel/datia/site/">Nuno Datia</a> |				
 						<a href="">Osvaldo Venda Brasão</a> 						
 					</li></ul>
 					</td>
