--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
 						<a href="">Luís de Sousa</a> | 
 						<a href="https://scholar.google.com/citations?user=jhbU2DcAAAAJ&hl=pt-BR">Walter Renteria-Agualimpia</a> | 
 						<a href="http://www.gsd.inesc-id.pt/~mcouceiro/">Maria Couceiro</a> | 
@@ -572,6 +573,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">Joana Cruz Diniz</a> | 
 						<a href="">Filipe Carrapeto</a> | 
 						<a href="">José Correia</a> | 
 						<a href="">Hugo Lopes</a> | ...						
