--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="">SocialNLP'16</a> |
+						<a href="http://www.jcdl2016.org">JCDL'16</a> |
+						<a href="https://sites.google.com/site/socialnlp2016/">SocialNLP'16</a> |
 						<a href="http://www.agile-online.org/index.php/conference/conference-2016">AGILE'15</a> |
 						<a href="http://ecir2016.dei.unipd.it">ECIR'16</a> |
 						<a href="http://www.acm.org/conferences/sac/sac2016/">SAC'16</a> |
