--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Luis M. de Campos, Juan M. Fernández-Luna, Juan F. Huete, Pável Calado and Bruno Martins, <i>Learning Parliamentary Profiles for Recommendation Tasks</i>, Proceedings of the Conference of the Spanish Association for Artificial Intelligence, 2015 [<a href="http://link.springer.com/chapter/10.1007%2F978-3-319-24598-0_17">PDF</a>]</li> 
 <li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
 <li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
 <li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
