--- a/index.html
+++ b/index.html
@@ -575,10 +575,30 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-						<a href="">Joana Cruz Diniz</a> | 
-						<a href="">Filipe Carrapeto</a> | 
-						<a href="">José Correia</a> | 
-						<a href="">Hugo Lopes</a> | ...						
+						<a href="">Joana Cruz Diniz</a> |
+						<a href="">Filipe Carrapeto</a> |
+						<a href="">José Correia</a> |
+						<a href="">Hugo Lopes</a> |
+
+						<a href="">Tony Tam</a> | <!-- Text Mining : Classificação automática de e-mails -->
+						<a href="">Francisco Salvador</a> | <!-- Avaliação Comparativa de formatos de dados georreferenciados para troca de informação entre sistemas de Comando e Controlo no contexto militar -->
+						<a href="">Edgar Rocha</a> | <!-- Influence and difusion of information on Twitter -->
+						<a href="">Nuno Nobre</a> | <!-- Anaphora Resolution -->
+						<a href="">Nuno Apolónia</a> | <!-- Redes sociais e sistemas P2P -->
+						<a href="">Andreia Pinheiro</a> | <!-- Enterprise Architecture Without Tiers -->
+						<a href="">Miguel Raposo</a> | <!-- The browserver -->
+						<a href="">Alexandre Gouveia</a> | <!-- Process Mining de Aplicações Empresariais -->
+						<a href="">Carlos Libório</a> | <!-- Análise e Descoberta de Orquestrações de Serviços -->
+						<a href="">Diogo Oliveira</a> | <!-- Extraction and classification of named entities -->
+						<a href="">Bruno Almeida</a> | <!-- Difusão selectiva de informação multimédia -->
+						<a href="">Fábio Ferreira</a> | <!-- Interpretação de perguntas e extensão da taxonomia do Li e Roth para as artes -->
+						<a href="">Luís Carvalho</a> | <!-- Criação de Léxicos Bilingues para Tradução Automática Estatística -->
+						<a href="">Mário Dourado</a> | <!-- Em que filmes participou a actríz Scarlett Johansson? -->
+						<a href="">Nuno Amador</a> | <!-- Meta-Cluster - Um meta-Motor de Pesquisa para a Web Portuguesa -->
+						<a href="">Paula Fonseca</a> | <!-- Porque sorri a Mona Lisa? -->
+						<a href="">Hugo Miguel Teixeira</a> | <!-- MobileTrails - Aplicação Móvel com Localização Geográfica -->
+						<a href="">João Miguel Guimarães</a> | <!-- CLEFoMania 2 - Participação na tarefa de Question-Answering do CLEF 2008 -->
+						<a href="">Pedro Miguel Teixeira</a> <!-- Magoo2 - Exploração e procura de ficheiros -->
 					</li></ul>
 					</td>
 				</tr>
