--- a/index.html
+++ b/index.html
@@ -579,7 +579,41 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="">Filipe Carrapeto</a> |
 						<a href="">José Correia</a> |
 						<a href="">Hugo Lopes</a> |
-
+						<a href="">Gaspar Brogueira</a> | <!-- Sistema Inteligente de Recolha e Armazenamento de Informação Proveniente do Twitter -->
+						<a href="">Rita Policarpo</a> |	<!-- Semantic Classification of Nouns -->
+						<a href="">Jhonny Alexander Aldeia de Jesus</a> | <!-- Comparador de Preços Inteligente -->
+						<a href="">Vanessa Alves Baptista</a> | <!-- Diz-me o que escreves e dir-te-ai quem és : Processamento de linguagem Natural Aplicado à Literatura -->
+						<a href="">Francisco Afonso Raposo</a> | <!-- Influence of Summarization on Music Classification Tasks -->
+						<a href="">Sérgio Alves</a> | <!-- Neo4Location - Um repositório graph based para informação de localização -->
+						<a href="">Luís Silva</a> | <!-- Estimativa do Número de Vítimas Mortais a 30 Dias em Acidentes Rodoviários -->
+						<a href="">Hugo Hermógenes Rosa</a> | <!-- Topic Detection within Public Social Networks -->
+						<a href="">Paulo Figueiredo</a> | <!-- Video Summaries for Science Talks -->
+						<a href="">Vasco Marcelino</a> | <!-- Recommendation Systems -->
+						<a href="">Pedro Rijo</a> | <!-- Implicit social network extraction from an academic information system -->
+						<a href="">Viviana Cabrita</a> | <!-- Identificar, Ordenar e Relacionar Eventos -->
+						<a href="">Fábio Carballo</a> |	<!-- Masters’ Courses Recommendation: Exploring Collaborative Filtering and Singular Value Decomposition with Student Profiling -->
+						<a href="">Francisco Afonso Raposo</a> | <!-- Influence of Summarization on Music Classification Tasks -->
+						<a href="">Ricardo Cunha</a> | <!-- Improvise - Criação de playlist tendo em conta a atividade do utilizador -->
+						<a href="">Marta Quintão</a> | <!-- Quotation attribution for Portuguese news corpora -->
+						<a href="">Hugo da Costa Rosa</a> | <!-- Topic detection within public social networks -->
+						<a href="">Nelson Nunes</a> | <!-- Planeador colaborativo de deslocações em bicicleta em meio urbano -->
+						<a href="">Filipe Brito</a> | <!-- WIRE - What's the relation -->
+						<a href="">João Pedro Machado</a> |	<!-- Beki : Benchmarck Kinect -->
+						<a href="">David Gil Machado Matias</a> | <!-- Sistema de Gestao de Transportes Flexiveis -->
+						<a href="">Flávio Nuno Martins</a> | <!-- A Query Expansion Framework -->
+						<a href="">Luís Filipe Gregório Dias</a> | <!-- CollectTA : Collective Tour Advisor -->
+						<a href="">Tiago Esteves de Freitas</a> | <!-- Syntactic REAP.PT - Exercises on Clitic Pronouning -->
+						<a href="">Joaquim Franic Silva</a> | <!-- Extraction of Bibliographic References to Feed Institutional Repositories -->
+						<a href="">Ricardo Miguel Loureiro da Costa</a> | <!-- Bibliographic Metadata Harvesting to Support the Management of an Institutional Repository -->										
+						<a href="">David Barbosa Maia</a> | <!-- Audio Chord Identification -->								
+						<a href="">Hugo Rodrigues</a> | <!-- Answer Selection in Question Answering -->
+						<a href="">Joao Filipe da Silva</a> | <!-- Statistical Machine Translation - The Problem of Unknown Words -->
+						<a href="">Ricardo Pires</a> | <!-- Query Classification and Expansion in Just.Ask Question Answering System -->
+						<a href="">Cristiano Marques</a> | <!-- REAP.PT Sintático -->					
+						<a href="">Ricardo Portela</a> | <!-- Identificação automática de nomes compostos -->
+						<a href="">Andreia Maurício</a> | <!-- Identificação, classificação e normalização de expressões temporais -->
+						<a href="">André Gonçalves</a> | <!-- The Answer Question in Question Answering Systems -->
+						<a href="">Tiago Garçia</a> | <!-- Social Scribe : Our Personal Information At Our Service -->
 						<a href="">Tony Tam</a> | <!-- Text Mining : Classificação automática de e-mails -->
 						<a href="">Francisco Salvador</a> | <!-- Avaliação Comparativa de formatos de dados georreferenciados para troca de informação entre sistemas de Comando e Controlo no contexto militar -->
 						<a href="">Edgar Rocha</a> | <!-- Influence and difusion of information on Twitter -->
