--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@ involved in several research projects related to geospatial aspects in informati
 					</td>
 				</tr>
 				<tr>
+					<td>
+						<strong>DataJoy: </strong><a href="https://www.getdatajoy.com/user/568cf511d3247a2255716ff3">https://www.getdatajoy.com/user/568cf511d3247a2255716ff3</a>
+					</td>
+				</tr>
+				<tr>
 					<td>&nbsp;</td>
 				</tr>
 			</table>
