--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ involved in several research projects related to geospatial aspects in informati
 				</tr>
 				<tr>
 					<td>
-						<strong>github: </strong><a href="https://github.com/bgmartins">https://github.com/bgmartins</a>
+						<strong>GitHub: </strong><a href="https://github.com/bgmartins">https://github.com/bgmartins</a>
 					</td>
 				</tr>
 				<tr>
