--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.mdpi.com/journal/ijgi">ISPRS International Journal of Geo-Information</a> |
 						<a href="http://tsas.acm.org">ACM Transactions on Spatial Algorithms and Systems</a> |
 						<a href="http://link.springer.com/journal/10109">Journal of Geographical Systems</a> |
 						<a href="http://www.pitt.edu/~scc/">Spatial Cognition and Computation</a> |
