--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
-<li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
-<li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837706">PDF</a>]</li>
+<li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837693">PDF</a>]</li>
+<li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837690">PDF</a>]</li>
 <li>Luis M. de Campos, Juan M. Fernández-Luna, Juan F. Huete, Pável Calado and Bruno Martins, <i>Learning Parliamentary Profiles for Recommendation Tasks</i>, Proceedings of the Conference of the Spanish Association for Artificial Intelligence, 2015 [<a href="http://link.springer.com/chapter/10.1007%2F978-3-319-24598-0_17">PDF</a>]</li> 
 <li>David Batista, Bruno Martins and Mário J. Silva, <i>Semi-Supervised Bootstrapping of Relationship Extractors with Distributional Semantics</i>, Proceedings of the Conference on Empirical Methods in Natural Language Processing, 2015 [<a href="https://aclweb.org/anthology/D/D15/D15-1056.pdf">PDF</a>] </li>
 <li>João Pereira, Bruno Martins and Helena Galhardas, <i>A Benchmark for Relation Extraction Kernels</i>, Proceedings of the East-European Conference on Advances in Databases and Information Systems, 2015 [<a href="http://link.springer.com/book/10.1007/978-3-319-23135-8">PDF</a>] </li>
