--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@ involved in several research projects related to geospatial aspects in informati
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
+					<td><b></b>I'm looking for (locally-enrolled and highly motivated) Masters students to work on a range of projects. Contact me if you are interested.</b></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td><h2><a name="contacts">Contacts</a></h2></td>
 				</tr>
 				<tr>
