--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><b></b>I'm looking for (locally-enrolled and highly motivated) Masters students to work on a range of projects. Contact me if you are interested.</b></td>
+					<td><b>I'm looking for (locally-enrolled and highly motivated) Masters students to work on a range of projects. Contact me if you are interested.</b></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
