--- a/index.html
+++ b/index.html
@@ -531,6 +531,10 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<!-- 
+						<a href="http://www.iaria.org/conferences2016/GEOProcessing16.html">GEOProcessing'16</a> |
+						<a href="http://www.iaria.org/conferences2016/eKNOW16.html">eKNOW'16</a> |
+						-->
 						<a href="http://www.jcdl2016.org">JCDL'16</a> |
 						<a href="https://sites.google.com/site/socialnlp2016/">SocialNLP'16</a> |
 						<a href="http://www.agile-online.org/index.php/conference/conference-2016">AGILE'16</a> |
