--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>Scopus Author ID: </strong>8546762500
 					</td>
 				</tr>
+				<tr>
+					<td>
+						<strong>Mathematics Genealogy Project: </strong><a href="http://genealogy.math.ndsu.nodak.edu/id.php?id=132381">132381</a>
+					</td>
+				</tr>
 				<!-- <tr>
 					<td>
 						<strong>FCT: </strong>J027013YZHME
