--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.tandfonline.com/loi/tgis20">International Journal of Geographical Information Science</a> |
 						<a href="http://www.mdpi.com/journal/entropy">Entropy</a> |
 						<a href="http://www.mdpi.com/journal/ijgi">ISPRS International Journal of Geo-Information</a> |
 						<a href="http://tsas.acm.org">ACM Transactions on Spatial Algorithms and Systems</a> |
