--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Other Publications</h3>
 
 			<ul>
+<li>Dirk Ahlers, Erik Wilde and Bruno Martins, <i>Report on the Fourth Workshop on Location and the Web (LocWeb 2015)</i>, SIGIR Forum, vol. 49, no. 2, 2015 [<a href="http://sigir.org/files/forum/2015D/p123.pdf">PDF</a>]</li>
 <li>Dirk Ahlers, Erik Wilde and Bruno Martins, <i>Report on the Fourth Workshop on Location and the Web (LocWeb 2014)</i>, SIGIR Forum, vol. 49, no. 1, 2015 [<a href="http://sigir.org/files/forum/2015J/p035.pdf">PDF</a>]</li>
 <li>Miguel Costa and Bruno Martins, <i>Uma Comparação Sistemática de Diferentes Abordagens para a Sumarização Automática Extrativa de Textos em Português</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 7, no. 1, 2015 [<a href="http://www.linguamatica.com/index.php/linguamatica/article/view/V7N1-2">PDF</a>]</li>
 <li>Indira Brito and Bruno Martins, <i>Realização de Previsões com Conteúdos Textuais em Português</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 6, no. 1, 2014 [<a href="http://www.linguamatica.com/index.php/linguamatica/article/view/v6n1-04">PDF</a>]</li>
