--- a/index.html
+++ b/index.html
@@ -538,6 +538,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.tpdl2016.org">TPDL’16</a> |
 						<a href="http://inforum.org.pt/INForum2016">INForum’16</a> |
 						<!-- 
 						<a href="http://www.iaria.org/conferences2016/GEOProcessing16.html">GEOProcessing'16</a> |
