--- a/index.html
+++ b/index.html
@@ -589,13 +589,14 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://sigarra.up.pt/feup/pt/fest_geral.cursos_list?pv_num_unico=201203581&pv_redirect_perc_acad=S">Manika Kar</a> | 
 						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
-						<a href="">Luís de Sousa</a> | 
+						<a href="http://www.eawag.ch/en/aboutus/portrait/organisation/staff/profile/luis-de-sousa/show/">Luís de Sousa</a> | 
 						<a href="https://scholar.google.com/citations?user=jhbU2DcAAAAJ&hl=pt-BR">Walter Renteria-Agualimpia</a> | 
 						<a href="http://www.gsd.inesc-id.pt/~mcouceiro/">Maria Couceiro</a> | 
 						<a href="http://www.ssrg.ece.vt.edu/~peluso/">Sebastiano Peluso</a> |				
 						<a href="http://pwp.net.ipl.pt/isel/datia/site/">Nuno Datia</a> |				
-						<a href="">Osvaldo Venda Brasão</a> 						
+						<a href="https://repositorioaberto.uab.pt/handle/10400.2/3105">Osvaldo Venda Brasão</a> 						
 					</li></ul>
 					</td>
 				</tr>
